fixed section hover on mobile

--- a/style.css
+++ b/style.css
@@ -169,6 +169,9 @@ img{
     width: 50px;
     height: 50px;
   }
+  .game .section:hover{
+    background-color: transparent;
+  }
   .section1{
     border: 1px solid black;
     border-top: 0;
